--- a/index.html
+++ b/index.html
@@ -1,36 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>youtube-clone</title>
-    <script src="https://kit.fontawesome.com/d86848cfe0.js"crossorigin="anonymus"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/d86848cfe0.js" crossorigin="anonymus"></script>
     <link href="https//fonts.googleapis.com/css2? family=r=Roboto:wght@100;400;500;700;&display=swap" rel="stylesheet">
+    <title>Youtube Clone</title>
 </head>
-<body>
-   <nav class="header">
-       <ul class="header-area">
-           <li class="logo-area">
-               <a href="#"><i class="fa fa-bars"></i></a>
-               <a href="#"><img src="image/77791-logo-computer-youtube-icons-download-free-image.png"></a>
-           </li>
-           <li class="search box">
-               <label for="search" class="flex">
-                   <input type="search" name="search"placeholder="search">
-                   <button type="button"><i class="fa fa-search"></i></button>
-               </label>
-           </li>
-           <li class="header icons">
-               <ul class="icons flex">
-                   <a href="#"><i class="fa fa-video"></i></a>
-                   <a href="#"><i class="fa fa-th"></i></a>
-                   <a href="#"><i class="fa fa-bell"></i></a>
-                   <a href="#"><i class="fa fa-user-circle"></i></a>
-               </ul>
-           </li>
-       </ul>
 
-   </nav>
+<body>
+    <header>
+        <nav>
+            <div id="logo">
+                <div id="hamburger">
+                    <a href="#"><i class="fa fa-bars"></i></a>
+                </div>
+                <a href="#"><img src="image/77791-logo-computer-youtube-icons-download-free-image.png" width="80px"
+                        height="20px"></a>
+            </div>
+            <div id="search_bar">
+                <input type="text" name="" id="search_field" placeholder="Search">
+                <button id="search_button" type="button"><i class="fa fa-search"></i></button>
+            </div>
+            <div id="avatars_icons">
+                <div class="icon">
+                    <a href="#"><i class="fa fa-video"></i></a>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fa fa-th"></i></a>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fa fa-bell"></i></a>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fa fa-user-circle"></i></a>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div id="main">
+
+    </div>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
