added video player and styled it to be responsive

--- a/index.html
+++ b/index.html
@@ -41,10 +41,17 @@
         </nav>
     </header>
 
-    <div id="main">
-
-    </div>
-
+    <div id="content">
+        <main>
+            <section id="playing_video">
+                <iframe src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </section>
+        </main>
+        <aside>
+            
+        </aside>
     <footer>
 
     </footer>
