added channel detail, video description and styled it and also set the header to fixed scroll

--- a/index.html
+++ b/index.html
@@ -74,10 +74,35 @@
                 </div>
             </section>
 
+            <section id="channel_detail">
+                <div id="channel_logo_name">
+                    <a href="#">
+                        <div id="channel_logo">T</div>
+                    </a>
+                    <div id="channel_name">
+                        <a href="#">
+                            <h4>The Odin Project</h4>
+                        </a>
+                        <p>1.02K subscribers</p>
+                    </div>
+                </div>
+                <a href="">
+                    <p id="subscribe_button">SUBSCRIBE</p>
+                </a>
+            </section>
+            <section id="video_description">
+                <p>How do you contribute to open source? In this video, I'll describe the easiest way to make a simple contribution
+                    to an
+                    open source project -- without using the command line, a text editor, "forking a repo", or even touching Git
+                    outside of
+                    Github. I'll also describe what kinds of contributions open
+                </p>
+            </section>
 
         </main>
+
         <aside>
-            
+
         </aside>
     <footer>
 
