integrated config files for linters and added screenshot for README

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <aside>
             <div class="suggestion">
                 <section class="thumbnail">
-                    <a href="#"><img src="./image/dwayne-johnson-fast-furious.png" alt=""></a>
+                    <a href="#"><img src="./image/thumbnail.png" alt=""></a>
                 </section>
                 <section class="thumbnail_description">
                     <p class="title">Your First Github Pull Request</p>
@@ -245,7 +245,7 @@
             </div>
             <div class="suggestion">
                 <section class="thumbnail">
-                    <a href="#"><img src="./image/pancakes-in-plate.png" alt=""></a>
+                    <a href="#"><img src="./image/thumbnail.png" alt=""></a>
                 </section>
                 <section class="thumbnail_description">
                     <p class="title">Your First Github Pull Request</p>
@@ -266,7 +266,7 @@
             </div>
             <div class="suggestion">
                 <section class="thumbnail">
-                    <a href="#"><img src="./image/black-panther.png" alt=""></a>
+                    <a href="#"><img src="./image/thumbnail.png" alt=""></a>
                 </section>
                 <section class="thumbnail_description">
                     <p class="title">Your First Github Pull Request</p>
